sold-out badge style

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,7 @@
 <article class="product">
+ <a href="#" class="sold-out badge badge-danger">SOLD OUT</a>
   <header>
+      
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
