--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -44,7 +44,7 @@ main section.categories-show {
         position: absolute;
         top: 0;
         right: 0;
-        padding: 10px;
+        padding: 8px;
         background-color: #eee;
         border-top-right-radius: 4px;
         border-bottom-left-radius: 20px;
@@ -73,4 +73,12 @@ main section.products-show {
   }
 }
 
+.sold-out {
+  text-align:left;
+  background-color:red;
+  margin-left: -15px;
+  margin-top: -20px;
+  padding: 10px;
+  border-radius: 5px 0 5px 0;
+}
 
