db reset to quantity 0

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <article class="product">
- <a href="#" class="sold-out badge badge-danger">SOLD OUT</a>
+ <a href="#" class="sold-out badge badge-danger">SOLD OUT !</a>
   <header>
       
     <%= link_to product do %>
