--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,23 +1,26 @@
 <h1>Admin Dashboard</h1>
 
 <p>
-  <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Number of Categories</a>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Number of Products</button>
-  
+  <a class="btn btn-primary btn-lg" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Number of Categories</a>
+  <button class="btn btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Number of Products</button>
+  <button type="button" class="btn btn-outline-info btn-lg"><%= link_to "All product details", [:admin, :products] %></button>
 </p>
 <div class="row">
   <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample1">
-      <div class="card card-body">
+      <div class="card card-body" style="font-size:30px">
         <%= @category_count %>
+        
       </div>
     </div>
   </div>
   <div class="col">
     <div class="collapse multi-collapse" id="multiCollapseExample2">
-      <div class="card card-body">
+      <div class="card card-body" style="font-size:30px">
         <%= @product_count %> 
       </div>
     </div>
   </div>
 </div>
+
+
