--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -11,6 +11,15 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+      <li>
+          <%= link_to 'Sign Out', [:logout] unless @current_user.nil? %>   
+        </li>
+        <li>
+          <%= link_to 'Sign In', [:login] if @current_user.nil? %>
+        </li>
+        <li>
+          <%= link_to 'Sign Up', [:signup] if @current_user.nil? %>
+        </li>
         <li>
           <%= link_to 'Home', :root %>
         </li>
@@ -30,6 +39,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+      
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
