--- a/app/views/admin/sales/_sale.html.erb
+++ b/app/views/admin/sales/_sale.html.erb
@@ -9,7 +9,15 @@
 <%= sale.ends_on%>
 </td>
 <td>
-STATUS
+<%# <span class="label label-success">Active</span>
+<span class="label label-warning">Upcoming</span> %>
+
+
+<% if sale.ends_on < Date.current %>
+    <span class="label label-danger">Finished</span>
+ 
+<% end %>
+
 </td>
 <td>
 <%= sale.percent_off%>
