--- a/app/views/admin/sales/_sale.html.erb
+++ b/app/views/admin/sales/_sale.html.erb
@@ -9,13 +9,15 @@
 <%= sale.ends_on%>
 </td>
 <td>
-<%# <span class="label label-success">Active</span>
-<span class="label label-warning">Upcoming</span> %>
+
 
 
 <% if sale.ends_on < Date.current %>
     <span class="label label-danger">Finished</span>
- 
+ <% elsif sale.starts_on > Date.current %>
+ <span class="label label-warning">Upcoming</span>
+ <% else %>
+<span class="label label-success">Active</span>
 <% end %>
 
 </td>
