--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,24 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
-  <% if current_user %>
-  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-<% else %>
-  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-<% end %>
+      <% if current_user %>
+      Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+    <% else %>
+      <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+    <% end %>
 
+  <%  def active_sale?
+  true
+    # Sale.where("sales.starts_on <= ? AND sales.end_on >= ?", Date.current, Date.current).any?
+    
+  end
+  %>
 
+    <% if active_sale? %>
+
+    <p class="alert alert-info" style="text-align:center"> There is a SALE! <%= "xmas" %>  <strong> Everything is <%= 15 %>% OFF! </strong></p>
+
+    <% end %>
     <%= yield %>
   </main>
 
