pass logic to class outside the helper, for extensible query

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
     <% if active_sale? %>
 
-    <p class="alert alert-info" style="text-align:center"> There is a SALE! <%= "xmas" %>  <strong> Everything is <%= 15 %>% OFF! </strong></p>
+    <p class="alert alert-info" style="text-align:center"> There is a SALE! <%= "" %> "Spring" <strong> Everything is <%= "25" %>% OFF! </strong></p>
 
     <% end %>
     <%= yield %>
